@@ -196,7 +196,7 @@ extern void menu_hilow_convert_audio(MENU_ITEM_PARAMETERS);
 
 extern void menu_debug_file_utils(MENU_ITEM_PARAMETERS);
 
-extern void menu_process_f_functions_by_action_name(int id_funcion);
+extern void menu_process_f_functions_by_action_name(int id_funcion,int si_pulsado_icono_zxdesktop);
 
 extern char menu_hilow_convert_audio_last_audio_sample;
 
